force-app/main/default/objects/Case/fields/Auto_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Reason__c</fullName>
    <description>Stores the reason why this Case was automatically closed by the Case Auto-Closer system.</description>
    <inlineHelpText>This field is automatically populated when a Case is closed by the Case Auto-Closer system, indicating the rule that triggered the closure.</inlineHelpText>
    <label>Auto Close Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>