force-app/main/default/objects/Case/fields/Final_Division__c.field-meta.xml
<CustomField>
    <fullName>Final_Division__c</fullName>
    <description>The caller&apos;s division that the agent identifies after speaking with the caller.</description>
    <inlineHelpText>What division ultimately handled this call?</inlineHelpText>
    <label>Final Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>