force-app/main/default/objects/Case/fields/INS_Branch_v2__c.field-meta.xml
<CustomField>
    <fullName>INS_Branch_v2__c</fullName>
    <description>Division branch</description>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Final_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>INS_Branch</valueSetName>
    </valueSet>
</CustomField>